# TaxBrokerReport

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
.devcontainer/: devcontainer.json
.githooks/: commit-msg  pre-commit
.github/: CODEOWNERS  copilot-instructions.md
.github/agents/: Menotor.agent.md
.github/workflows/: build-all.yml  build-pr.yml  ci.yml  format-pr.yml  test-pr.yml
docker/: Dockerfile  docke_doc.md  docker-compose.yml  docker_doc.md
docs/: ArchitecturePlan.md
docs/developers/: build-instructions.md
docs/users/: download-guide.md  edavki-upload-en.md  edavki-upload-sl.md
include/: platform_config.hpp  xml_generator.hpp
include/app/: application_service.hpp
include/backend/: xml_generator.hpp
include/gui/: main_window.hpp  worker.hpp
include/parsers/: csv_parser.hpp  ibkr_parser.hpp  traderepublic_parser.hpp  types_parser.hpp
include/taxbroker/: errors.hpp  types.hpp  types_def.hpp
include/utils/: logger.hpp  numeric_util.hpp
legacy-QT-GUI/: Makefile
legacy-QT-GUI/production/linux/: EdavkiXmlMaker.desktop
legacy-QT-GUI/resources/gui/: resources.qrc
legacy-QT-GUI/src/gui/: worker.cpp
legacy-QT-GUI/tests/: CMakeLists.txt  helper.cpp  helper.hpp  test_xml_generator.cpp
legacy-QT-GUI/tests/testData/: expected_test_output.json
production/linux/: bundle.sh
resources/xml/edavk/schemas/: Doh_DHO_4.xsd  Doh_Div_3.xsd
scripts/: build.sh  format.sh  install_hooks.sh  lib.sh  restore_exec_bits.sh  run.sh  run_server.sh  test.sh
src/: CMakeLists.txt  main.cpp  xml_generator.cpp
src/app/: application_service.cpp
src/backend/: report_loader.cpp  xml_generator.cpp
src/gui/: main_window.cpp
src/parsers/: ibkr_parser.cpp  traderepublic_parser.cpp
src/server/: server.cpp  server.hpp
src/utils/: logger.cpp
tests/: CMakeLists.txt  test_application_service.cpp  test_gui.cpp  test_report_loader.cpp  test_xml_generator.cpp
util/: util_xml.cpp  util_xml.hpp
